goods page update

--- a/index.html
+++ b/index.html
@@ -613,6 +613,7 @@
 	</div>
 	<script src="js/cart.js"></script>
 	<script src="js/search.js"></script>
+	<script src="js/getGoods.js"></script>
 </body>
 
 </html>
