--- a/goods.html
+++ b/goods.html
@@ -54,7 +54,7 @@
 				</nav>
 			</div>
 			<div class="col-lg-2 d-none d-lg-block">
-				<div class="form-control">
+				<div class="form-control search-block">
 					<input type="text" class="form-control" placeholder="Search" aria-label="Recipient's username"
 						aria-describedby="button-addon2">
 					<button class="btn btn-outline-secondary" type="button" id="button-addon2">
@@ -386,6 +386,9 @@
 			</form>
 		</div>
 	</div>
+	<script src="js/cart.js"></script>
+	<script src="js/search.js"></script>
+	<script src="js/getGoods.js"></script>
 </body>
 
 </html>
